# Alcator

./: .alcator-options  Alcator.cabal  README.md  Stellarator.cabal  stack.yaml
acorn_roms/: README.md
app/: Main.hs
asm/: os.config  os.s
shaders/: fragment.glsl  vertex.glsl
src/: ALU.hs  AcornAtom.hs  Asm.hs  Binary.hs  DebugCmd.hs  Debugger.hs  Disasm.hs  Display.hs  Emulation.hs  Events.hs  Keys.hs  Memory.hs  Metrics.hs  Stella.hs  Step.hs
states/: advent.state  atomcalc.state  compiler.state  example.state  forth.state  frogger.state  galax.state  labyrinth.state  sandpile.state  splsort.state  tcc.state  worm.1.state  worm.2.state  worm.3.state  worm.8.state  worm.state
