name:                Alcator
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Alcator#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

--  -fllvm -pgmlc /opt/local/bin/llc-mp-3.7 -pgmlo /opt/local/bin/opt-mp-3.7

library
  hs-source-dirs:      src
  ghc-options:         -O -Wall -fwarn-missing-signatures 
  extensions: CPP
  cpp-options: -DTRACE=0
  extensions:          
  exposed-modules:     Binary, Disasm,
                       DebugCmd, Memory, Asm, DebugState, AcornAtom, Debugger, Metrics, Step, Stella, CPU, ALU, Emulation, Display, Keys, Events
                       -- Events
  build-depends:       base
                     , GLFW-b
                     , clock
                     , bytestring
                     , dequeue
                     , vector
                     , OpenGL
                     , ordered-containers
                     , array
                     , bytestring
                     , mtl
                     , lens
                     , binary
                     , parsec
                     , haskeline
                     , containers
                     , OpenGL
                     , time
                     , serialise
  default-language:    Haskell2010

executable alcator
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O -Wall -fwarn-missing-signatures
  extensions: CPP
  cpp-options: -DTRACE=0
  build-depends:       base
                     , GLFW-b
                     , clock
                     , ordered-containers
                     , stm
                     , bytestring
                     , dequeue
                     , vector
                     , OpenGL
                     , array
                     , mtl
                     , lens
                     , binary
                     , cmdargs
                     , monad-loops
                     , parsec
                     , binary
                     , random
                     , haskeline
                     , containers
                     , OpenGL
                     , Alcator
                     , serialise
                     , directory
  default-language:    Haskell2010
 
source-repository head
  type:     git
  location: https://github.com/dpiponi/Alcator
